crates/plotnik-tests/tests/04-emit/bytecode/predicates/regex_op_string_value.txt
Q = (identifier =~ "foo") @id
------------------ DIAGNOSTICS -------------------
error: predicate operator and value do not match
 --> query.ptk:1:17
  |
1 | Q = (identifier =~ "foo") @id
  |                 ^^^^^^^^
  |
help: use a quoted string with `==`, `!=`, `^=`, `$=`, or `*=`; use `/…/` with `=~` or `!~`
